v/0.4.1/_sources/examples/01_deterministic_workflow.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/01_deterministic_workflow.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_01_deterministic_workflow.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_01_deterministic_workflow.py:


Running Deterministic Inference
===============================

Basic deterministic inference workflow.

This example will demonstrate how to run a simple inference workflow to generate a
basic determinstic forecast using one of the built in models of Earth-2 Inference
Studio.

In this example you will learn:

- How to instantiate a built in prognostic model
- Creating a data source and IO object
- Running a simple built in workflow
- Post-processing results

.. GENERATED FROM PYTHON SOURCE LINES 37-42

Set Up
------
All workflows inside Earth2Studio require constructed components to be
handed to them. In this example, let's take a look at the most basic:
:py:meth:`earth2studio.run.deterministic`.

.. GENERATED FROM PYTHON SOURCE LINES 44-48

.. literalinclude:: ../../earth2studio/run.py
   :language: python
   :start-after: # sphinx - deterministic start
   :end-before: # sphinx - deterministic end

.. GENERATED FROM PYTHON SOURCE LINES 50-55

Thus, we need the following:

- Prognostic Model: Use the built in FourCastNet Model :py:class:`earth2studio.models.px.FCN`.
- Datasource: Pull data from the GFS data api :py:class:`earth2studio.data.GFS`.
- IO Backend: Let's save the outputs into a Zarr store :py:class:`earth2studio.io.ZarrBackend`.

.. GENERATED FROM PYTHON SOURCE LINES 57-78

.. code-block:: Python

    import os

    os.makedirs("outputs", exist_ok=True)
    from dotenv import load_dotenv

    load_dotenv()  # TODO: make common example prep function

    from earth2studio.data import GFS
    from earth2studio.io import ZarrBackend
    from earth2studio.models.px import FCN

    # Load the default model package which downloads the check point from NGC
    package = FCN.load_default_package()
    model = FCN.load_model(package)

    # Create the data source
    data = GFS()

    # Create the IO handler, store in memory
    io = ZarrBackend()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Downloading fcn.zip: 0%|          | 0.00/267M [00:00<?, ?B/s]    Downloading fcn.zip: 0%|          | 33.4k/267M [00:00<31:11, 149kB/s]    Downloading fcn.zip: 0%|          | 66.4k/267M [00:00<31:29, 148kB/s]    Downloading fcn.zip: 0%|          | 119k/267M [00:00<24:55, 187kB/s]     Downloading fcn.zip: 0%|          | 238k/267M [00:00<14:26, 322kB/s]    Downloading fcn.zip: 0%|          | 450k/267M [00:01<08:31, 546kB/s]    Downloading fcn.zip: 0%|          | 934k/267M [00:01<04:14, 1.09MB/s]    Downloading fcn.zip: 1%|          | 1.81M/267M [00:01<01:50, 2.51MB/s]    Downloading fcn.zip: 1%|          | 2.29M/267M [00:01<01:37, 2.85MB/s]    Downloading fcn.zip: 1%|▏         | 3.69M/267M [00:01<01:05, 4.22MB/s]    Downloading fcn.zip: 3%|▎         | 7.18M/267M [00:01<00:26, 10.3MB/s]    Downloading fcn.zip: 3%|▎         | 8.55M/267M [00:02<00:26, 10.4MB/s]    Downloading fcn.zip: 4%|▍         | 10.3M/267M [00:02<00:28, 9.57MB/s]    Downloading fcn.zip: 5%|▌         | 14.1M/267M [00:02<00:21, 12.4MB/s]    Downloading fcn.zip: 7%|▋         | 17.9M/267M [00:02<00:18, 14.0MB/s]    Downloading fcn.zip: 8%|▊         | 21.8M/267M [00:03<00:17, 15.1MB/s]    Downloading fcn.zip: 10%|▉         | 25.7M/267M [00:03<00:15, 15.9MB/s]    Downloading fcn.zip: 11%|█         | 29.5M/267M [00:03<00:15, 16.2MB/s]    Downloading fcn.zip: 13%|█▎        | 33.3M/267M [00:03<00:14, 16.6MB/s]    Downloading fcn.zip: 14%|█▍        | 37.2M/267M [00:03<00:14, 16.8MB/s]    Downloading fcn.zip: 15%|█▌        | 41.1M/267M [00:04<00:13, 17.0MB/s]    Downloading fcn.zip: 17%|█▋        | 44.8M/267M [00:04<00:13, 16.9MB/s]    Downloading fcn.zip: 18%|█▊        | 48.6M/267M [00:04<00:13, 17.0MB/s]    Downloading fcn.zip: 20%|█▉        | 52.4M/267M [00:04<00:13, 17.1MB/s]    Downloading fcn.zip: 21%|██        | 56.3M/267M [00:05<00:12, 17.1MB/s]    Downloading fcn.zip: 23%|██▎       | 60.2M/267M [00:05<00:12, 17.3MB/s]    Downloading fcn.zip: 24%|██▍       | 64.0M/267M [00:05<00:12, 17.3MB/s]    Downloading fcn.zip: 25%|██▌       | 67.9M/267M [00:05<00:12, 17.3MB/s]    Downloading fcn.zip: 27%|██▋       | 71.7M/267M [00:06<00:11, 17.2MB/s]    Downloading fcn.zip: 28%|██▊       | 75.4M/267M [00:06<00:11, 17.1MB/s]    Downloading fcn.zip: 30%|██▉       | 79.2M/267M [00:06<00:11, 17.1MB/s]    Downloading fcn.zip: 31%|███       | 83.1M/267M [00:06<00:11, 17.2MB/s]    Downloading fcn.zip: 33%|███▎      | 87.0M/267M [00:06<00:10, 17.3MB/s]    Downloading fcn.zip: 34%|███▍      | 90.9M/267M [00:07<00:10, 17.3MB/s]    Downloading fcn.zip: 36%|███▌      | 94.7M/267M [00:07<00:10, 17.3MB/s]    Downloading fcn.zip: 37%|███▋      | 98.5M/267M [00:07<00:10, 17.2MB/s]    Downloading fcn.zip: 38%|███▊      | 102M/267M [00:07<00:09, 17.3MB/s]     Downloading fcn.zip: 40%|███▉      | 106M/267M [00:08<00:09, 17.4MB/s]    Downloading fcn.zip: 41%|████▏     | 110M/267M [00:08<00:09, 17.3MB/s]    Downloading fcn.zip: 43%|████▎     | 114M/267M [00:08<00:09, 17.2MB/s]    Downloading fcn.zip: 44%|████▍     | 118M/267M [00:08<00:09, 17.2MB/s]    Downloading fcn.zip: 46%|████▌     | 122M/267M [00:09<00:08, 17.3MB/s]    Downloading fcn.zip: 47%|████▋     | 125M/267M [00:09<00:08, 17.2MB/s]    Downloading fcn.zip: 49%|████▊     | 129M/267M [00:09<00:08, 17.3MB/s]    Downloading fcn.zip: 50%|████▉     | 133M/267M [00:09<00:08, 17.1MB/s]    Downloading fcn.zip: 51%|█████▏    | 137M/267M [00:10<00:07, 17.1MB/s]    Downloading fcn.zip: 53%|█████▎    | 141M/267M [00:10<00:07, 17.0MB/s]    Downloading fcn.zip: 54%|█████▍    | 145M/267M [00:10<00:07, 17.1MB/s]    Downloading fcn.zip: 56%|█████▌    | 148M/267M [00:10<00:07, 17.1MB/s]    Downloading fcn.zip: 57%|█████▋    | 152M/267M [00:10<00:06, 17.2MB/s]    Downloading fcn.zip: 59%|█████▊    | 156M/267M [00:11<00:06, 17.2MB/s]    Downloading fcn.zip: 60%|█████▉    | 160M/267M [00:11<00:06, 17.2MB/s]    Downloading fcn.zip: 61%|██████▏   | 164M/267M [00:11<00:06, 17.3MB/s]    Downloading fcn.zip: 63%|██████▎   | 168M/267M [00:11<00:06, 17.3MB/s]    Downloading fcn.zip: 64%|██████▍   | 171M/267M [00:12<00:05, 17.2MB/s]    Downloading fcn.zip: 66%|██████▌   | 175M/267M [00:12<00:05, 17.1MB/s]    Downloading fcn.zip: 67%|██████▋   | 179M/267M [00:12<00:05, 17.2MB/s]    Downloading fcn.zip: 69%|██████▊   | 183M/267M [00:12<00:05, 17.4MB/s]    Downloading fcn.zip: 70%|███████   | 187M/267M [00:13<00:04, 17.3MB/s]    Downloading fcn.zip: 71%|███████▏  | 191M/267M [00:13<00:04, 17.3MB/s]    Downloading fcn.zip: 73%|███████▎  | 195M/267M [00:13<00:04, 17.4MB/s]    Downloading fcn.zip: 74%|███████▍  | 199M/267M [00:13<00:04, 17.6MB/s]    Downloading fcn.zip: 76%|███████▌  | 202M/267M [00:13<00:03, 17.3MB/s]    Downloading fcn.zip: 77%|███████▋  | 206M/267M [00:14<00:03, 17.2MB/s]    Downloading fcn.zip: 79%|███████▊  | 210M/267M [00:14<00:03, 17.2MB/s]    Downloading fcn.zip: 80%|████████  | 214M/267M [00:14<00:03, 17.3MB/s]    Downloading fcn.zip: 82%|████████▏ | 218M/267M [00:14<00:02, 17.3MB/s]    Downloading fcn.zip: 83%|████████▎ | 222M/267M [00:15<00:02, 17.4MB/s]    Downloading fcn.zip: 85%|████████▍ | 225M/267M [00:15<00:02, 17.3MB/s]    Downloading fcn.zip: 86%|████████▌ | 229M/267M [00:15<00:02, 17.2MB/s]    Downloading fcn.zip: 87%|████████▋ | 233M/267M [00:15<00:02, 17.2MB/s]    Downloading fcn.zip: 89%|████████▉ | 237M/267M [00:16<00:01, 17.1MB/s]    Downloading fcn.zip: 90%|█████████ | 241M/267M [00:16<00:01, 17.2MB/s]    Downloading fcn.zip: 92%|█████████▏| 244M/267M [00:16<00:01, 17.1MB/s]    Downloading fcn.zip: 93%|█████████▎| 248M/267M [00:16<00:01, 17.1MB/s]    Downloading fcn.zip: 94%|█████████▍| 252M/267M [00:17<00:00, 17.2MB/s]    Downloading fcn.zip: 96%|█████████▌| 256M/267M [00:17<00:00, 17.3MB/s]    Downloading fcn.zip: 97%|█████████▋| 260M/267M [00:17<00:00, 17.3MB/s]    Downloading fcn.zip: 99%|█████████▉| 263M/267M [00:17<00:00, 17.1MB/s]    Downloading fcn.zip: 100%|██████████| 267M/267M [00:17<00:00, 15.8MB/s]
    /usr/local/lib/python3.12/dist-packages/modulus/models/module.py:360: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.
      model_dict = torch.load(




.. GENERATED FROM PYTHON SOURCE LINES 79-88

Execute the Workflow
--------------------
With all components initialized, running the workflow is a single line of Python code.
Workflow will return the provided IO object back to the user, which can be used to
then post process. Some have additional APIs that can be handy for post-processing or
saving to file. Check the API docs for more information.

For the forecast we will predict for two days (these will get executed as a batch) for
20 forecast steps which is 5 days.

.. GENERATED FROM PYTHON SOURCE LINES 90-97

.. code-block:: Python

    import earth2studio.run as run

    nsteps = 20
    io = run.deterministic(["2024-01-01"], nsteps, model, data, io)

    print(io.root.tree())





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2025-01-03 22:21:08.781 | INFO     | earth2studio.run:deterministic:75 - Running simple workflow!
    2025-01-03 22:21:08.822 | INFO     | earth2studio.run:deterministic:82 - Inference device: cuda
    2025-01-03 22:21:08.991 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:209 - Fetching GFS index file: 2024-01-01 00:00:00 lead 0:00:00
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]                                                                                2025-01-03 22:21:10.274 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: u10m at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]    Fetching GFS for 2024-01-01 00:00:00:   4%|▍         | 1/26 [00:07<03:06,  7.45s/it]                                                                                        2025-01-03 22:21:17.724 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: v10m at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:   4%|▍         | 1/26 [00:07<03:06,  7.45s/it]    Fetching GFS for 2024-01-01 00:00:00:   8%|▊         | 2/26 [00:11<02:11,  5.48s/it]                                                                                        2025-01-03 22:21:21.823 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: t2m at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:   8%|▊         | 2/26 [00:11<02:11,  5.48s/it]    Fetching GFS for 2024-01-01 00:00:00:  12%|█▏        | 3/26 [00:15<01:54,  4.98s/it]                                                                                        2025-01-03 22:21:26.208 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: sp at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  12%|█▏        | 3/26 [00:15<01:54,  4.98s/it]    Fetching GFS for 2024-01-01 00:00:00:  15%|█▌        | 4/26 [00:20<01:43,  4.69s/it]                                                                                        2025-01-03 22:21:30.444 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: msl at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  15%|█▌        | 4/26 [00:20<01:43,  4.69s/it]    Fetching GFS for 2024-01-01 00:00:00:  19%|█▉        | 5/26 [00:24<01:36,  4.60s/it]                                                                                        2025-01-03 22:21:34.893 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: t850 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  19%|█▉        | 5/26 [00:24<01:36,  4.60s/it]    Fetching GFS for 2024-01-01 00:00:00:  23%|██▎       | 6/26 [00:29<01:33,  4.67s/it]                                                                                        2025-01-03 22:21:39.690 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: u1000 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  23%|██▎       | 6/26 [00:29<01:33,  4.67s/it]    Fetching GFS for 2024-01-01 00:00:00:  27%|██▋       | 7/26 [00:35<01:34,  4.98s/it]                                                                                        2025-01-03 22:21:45.315 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: v1000 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  27%|██▋       | 7/26 [00:35<01:34,  4.98s/it]    Fetching GFS for 2024-01-01 00:00:00:  31%|███       | 8/26 [00:40<01:32,  5.17s/it]                                                                                        2025-01-03 22:21:50.880 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: z1000 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  31%|███       | 8/26 [00:40<01:32,  5.17s/it]    Fetching GFS for 2024-01-01 00:00:00:  35%|███▍      | 9/26 [00:46<01:32,  5.42s/it]                                                                                        2025-01-03 22:21:56.857 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: u850 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  35%|███▍      | 9/26 [00:46<01:32,  5.42s/it]    Fetching GFS for 2024-01-01 00:00:00:  38%|███▊      | 10/26 [00:52<01:28,  5.53s/it]                                                                                         2025-01-03 22:22:02.642 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: v850 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  38%|███▊      | 10/26 [00:52<01:28,  5.53s/it]    Fetching GFS for 2024-01-01 00:00:00:  42%|████▏     | 11/26 [00:57<01:22,  5.48s/it]                                                                                         2025-01-03 22:22:08.017 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: z850 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  42%|████▏     | 11/26 [00:57<01:22,  5.48s/it]    Fetching GFS for 2024-01-01 00:00:00:  46%|████▌     | 12/26 [01:03<01:19,  5.70s/it]                                                                                         2025-01-03 22:22:14.217 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: u500 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  46%|████▌     | 12/26 [01:03<01:19,  5.70s/it]    Fetching GFS for 2024-01-01 00:00:00:  50%|█████     | 13/26 [01:09<01:15,  5.80s/it]                                                                                         2025-01-03 22:22:20.253 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: v500 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  50%|█████     | 13/26 [01:09<01:15,  5.80s/it]    Fetching GFS for 2024-01-01 00:00:00:  54%|█████▍    | 14/26 [01:16<01:11,  5.99s/it]                                                                                         2025-01-03 22:22:26.660 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: z500 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  54%|█████▍    | 14/26 [01:16<01:11,  5.99s/it]    Fetching GFS for 2024-01-01 00:00:00:  58%|█████▊    | 15/26 [01:22<01:06,  6.07s/it]                                                                                         2025-01-03 22:22:32.934 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: t500 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  58%|█████▊    | 15/26 [01:22<01:06,  6.07s/it]    Fetching GFS for 2024-01-01 00:00:00:  62%|██████▏   | 16/26 [01:28<00:59,  5.93s/it]                                                                                         2025-01-03 22:22:38.545 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: z50 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  62%|██████▏   | 16/26 [01:28<00:59,  5.93s/it]    Fetching GFS for 2024-01-01 00:00:00:  65%|██████▌   | 17/26 [01:32<00:49,  5.53s/it]                                                                                         2025-01-03 22:22:43.144 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: r500 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  65%|██████▌   | 17/26 [01:32<00:49,  5.53s/it]    Fetching GFS for 2024-01-01 00:00:00:  69%|██████▉   | 18/26 [01:37<00:40,  5.11s/it]                                                                                         2025-01-03 22:22:47.277 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: r850 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  69%|██████▉   | 18/26 [01:37<00:40,  5.11s/it]    Fetching GFS for 2024-01-01 00:00:00:  73%|███████▎  | 19/26 [01:41<00:33,  4.82s/it]                                                                                         2025-01-03 22:22:51.425 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: tcwv at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  73%|███████▎  | 19/26 [01:41<00:33,  4.82s/it]    Fetching GFS for 2024-01-01 00:00:00:  77%|███████▋  | 20/26 [01:45<00:27,  4.64s/it]                                                                                         2025-01-03 22:22:55.629 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: u100m at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  77%|███████▋  | 20/26 [01:45<00:27,  4.64s/it]    Fetching GFS for 2024-01-01 00:00:00:  81%|████████  | 21/26 [01:48<00:21,  4.23s/it]                                                                                         2025-01-03 22:22:58.922 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: v100m at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  81%|████████  | 21/26 [01:48<00:21,  4.23s/it]    Fetching GFS for 2024-01-01 00:00:00:  85%|████████▍ | 22/26 [01:51<00:15,  3.95s/it]                                                                                         2025-01-03 22:23:02.196 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: u250 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  85%|████████▍ | 22/26 [01:51<00:15,  3.95s/it]    Fetching GFS for 2024-01-01 00:00:00:  88%|████████▊ | 23/26 [01:56<00:12,  4.01s/it]                                                                                         2025-01-03 22:23:06.361 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: v250 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  88%|████████▊ | 23/26 [01:56<00:12,  4.01s/it]    Fetching GFS for 2024-01-01 00:00:00:  92%|█████████▏| 24/26 [02:00<00:08,  4.17s/it]                                                                                         2025-01-03 22:23:10.907 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: z250 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  92%|█████████▏| 24/26 [02:00<00:08,  4.17s/it]    Fetching GFS for 2024-01-01 00:00:00:  96%|█████████▌| 25/26 [02:04<00:04,  4.16s/it]                                                                                         2025-01-03 22:23:15.049 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:255 - Fetching GFS grib file for variable: t250 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  96%|█████████▌| 25/26 [02:04<00:04,  4.16s/it]    Fetching GFS for 2024-01-01 00:00:00: 100%|██████████| 26/26 [02:08<00:00,  4.16s/it]    Fetching GFS for 2024-01-01 00:00:00: 100%|██████████| 26/26 [02:08<00:00,  4.96s/it]
    2025-01-03 22:23:19.359 | SUCCESS  | earth2studio.run:deterministic:95 - Fetched data from GFS
    2025-01-03 22:23:19.368 | INFO     | earth2studio.run:deterministic:125 - Inference starting!
    Running inference:   0%|          | 0/21 [00:00<?, ?it/s]    Running inference:   5%|▍         | 1/21 [00:01<00:31,  1.57s/it]    Running inference:  10%|▉         | 2/21 [00:04<00:45,  2.40s/it]    Running inference:  14%|█▍        | 3/21 [00:07<00:47,  2.62s/it]    Running inference:  19%|█▉        | 4/21 [00:10<00:47,  2.79s/it]    Running inference:  24%|██▍       | 5/21 [00:13<00:43,  2.72s/it]    Running inference:  29%|██▊       | 6/21 [00:16<00:43,  2.89s/it]    Running inference:  33%|███▎      | 7/21 [00:19<00:42,  3.02s/it]    Running inference:  38%|███▊      | 8/21 [00:22<00:38,  2.97s/it]    Running inference:  43%|████▎     | 9/21 [00:25<00:37,  3.10s/it]    Running inference:  48%|████▊     | 10/21 [00:29<00:36,  3.30s/it]    Running inference:  52%|█████▏    | 11/21 [00:33<00:34,  3.48s/it]    Running inference:  57%|█████▋    | 12/21 [00:36<00:30,  3.35s/it]    Running inference:  62%|██████▏   | 13/21 [00:40<00:27,  3.50s/it]    Running inference:  67%|██████▋   | 14/21 [00:44<00:25,  3.67s/it]    Running inference:  71%|███████▏  | 15/21 [00:47<00:21,  3.54s/it]    Running inference:  76%|███████▌  | 16/21 [00:50<00:16,  3.26s/it]    Running inference:  81%|████████  | 17/21 [00:52<00:12,  3.03s/it]    Running inference:  86%|████████▌ | 18/21 [00:55<00:08,  2.98s/it]    Running inference:  90%|█████████ | 19/21 [00:58<00:05,  2.97s/it]    Running inference:  95%|█████████▌| 20/21 [01:01<00:02,  2.93s/it]    Running inference: 100%|██████████| 21/21 [01:04<00:00,  3.11s/it]    Running inference: 100%|██████████| 21/21 [01:04<00:00,  3.09s/it]
    2025-01-03 22:24:24.342 | SUCCESS  | earth2studio.run:deterministic:135 - Inference complete
    /
     ├── lat (720,) float64
     ├── lead_time (21,) timedelta64[h]
     ├── lon (1440,) float64
     ├── msl (1, 21, 720, 1440) float32
     ├── r500 (1, 21, 720, 1440) float32
     ├── r850 (1, 21, 720, 1440) float32
     ├── sp (1, 21, 720, 1440) float32
     ├── t250 (1, 21, 720, 1440) float32
     ├── t2m (1, 21, 720, 1440) float32
     ├── t500 (1, 21, 720, 1440) float32
     ├── t850 (1, 21, 720, 1440) float32
     ├── tcwv (1, 21, 720, 1440) float32
     ├── time (1,) datetime64[ns]
     ├── u1000 (1, 21, 720, 1440) float32
     ├── u100m (1, 21, 720, 1440) float32
     ├── u10m (1, 21, 720, 1440) float32
     ├── u250 (1, 21, 720, 1440) float32
     ├── u500 (1, 21, 720, 1440) float32
     ├── u850 (1, 21, 720, 1440) float32
     ├── v1000 (1, 21, 720, 1440) float32
     ├── v100m (1, 21, 720, 1440) float32
     ├── v10m (1, 21, 720, 1440) float32
     ├── v250 (1, 21, 720, 1440) float32
     ├── v500 (1, 21, 720, 1440) float32
     ├── v850 (1, 21, 720, 1440) float32
     ├── z1000 (1, 21, 720, 1440) float32
     ├── z250 (1, 21, 720, 1440) float32
     ├── z50 (1, 21, 720, 1440) float32
     ├── z500 (1, 21, 720, 1440) float32
     └── z850 (1, 21, 720, 1440) float32




.. GENERATED FROM PYTHON SOURCE LINES 98-105

Post Processing
---------------
The last step is to post process our results. Cartopy is a great library for plotting
fields on projections of a sphere. Here we will just plot the temperature at 2 meters
(t2m) 1 day into the forecast.

Notice that the Zarr IO function has additional APIs to interact with the stored data.

.. GENERATED FROM PYTHON SOURCE LINES 107-137

.. code-block:: Python

    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt

    forecast = "2024-01-01"
    variable = "t2m"
    step = 4  # lead time = 24 hrs

    plt.close("all")
    # Create a Robinson projection
    projection = ccrs.Robinson()

    # Create a figure and axes with the specified projection
    fig, ax = plt.subplots(subplot_kw={"projection": projection}, figsize=(10, 6))

    # Plot the field using pcolormesh
    im = ax.pcolormesh(
        io["lon"][:],
        io["lat"][:],
        io[variable][0, step],
        transform=ccrs.PlateCarree(),
        cmap="Spectral_r",
    )

    # Set title
    ax.set_title(f"{forecast} - Lead time: {6*step}hrs")

    # Add coastlines and gridlines
    ax.coastlines()
    ax.gridlines()
    plt.savefig("outputs/01_t2m_prediction.jpg")



.. image-sg:: /examples/images/sphx_glr_01_deterministic_workflow_001.png
   :alt: 2024-01-01 - Lead time: 24hrs
   :srcset: /examples/images/sphx_glr_01_deterministic_workflow_001.png, /examples/images/sphx_glr_01_deterministic_workflow_001_2_00x.png 2.00x
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /usr/local/lib/python3.12/dist-packages/cartopy/io/__init__.py:241: DownloadWarning: Downloading: https://naturalearth.s3.amazonaws.com/110m_physical/ne_110m_coastline.zip
      warnings.warn(f'Downloading: {url}', DownloadWarning)





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (3 minutes 53.363 seconds)


.. _sphx_glr_download_examples_01_deterministic_workflow.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 01_deterministic_workflow.ipynb <01_deterministic_workflow.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 01_deterministic_workflow.py <01_deterministic_workflow.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 01_deterministic_workflow.zip <01_deterministic_workflow.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
